change error log file name

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -81,8 +81,8 @@ RUN         sed -i '\|\[mysqld\]|a ft_min_word_len = 2' /etc/mysql/my.cnf && \
             sed -i 's|key_buffer.*|key_buffer_size         = 16M|' /etc/mysql/my.cnf && \
             sed -i 's|max_allowed_packet.*|max_allowed_packet      = 100M|' /etc/mysql/my.cnf && \
             sed -i 's|myisam-recover.*|myisam-recover-options  = BACKUP|' /etc/mysql/my.cnf && \
-            sed -i 's|log_error.*|log_error                = /var/log/mysql/mysql_error.log|' /etc/mysql/my.cnf && \
-            sed -i '\|\[mysqld_safe\]|a log_error       = /var/log/mysql/mysql_error.log' /etc/mysql/my.cnf && \
+            sed -i 's|log_error.*|log_error                = /var/log/mysql/dberror.log|' /etc/mysql/my.cnf && \
+            sed -i '\|\[mysqld_safe\]|a log_error       = /var/log/mysql/dberror.log' /etc/mysql/my.cnf && \
             sed -i 's|syslog.*|# syslog|' /etc/mysql/conf.d/mysqld_safe_syslog.cnf && \
             rm -rf /var/lib/mysql && \
             chown -R bugzilla:bugzilla /var/log/mysql && \
@@ -115,7 +115,6 @@ RUN         cd ~ && \
             /usr/bin/perl install-module.pl --all && \
             /var/www/html/${guestappname}/checksetup.pl && \
             sed -i "s|\$webservergroup.*|\$webservergroup = 'bugzilla';|" /var/www/html/${guestappname}/localconfig && \
-            sed -i "s|\$db_pass.*|\$db_pass = \$ENV{'DB_USER_PASSWORD'};|" /var/www/html/${guestappname}/localconfig && \
             sed -i "s|\$db_port.*|\$db_port = 3306;|" /var/www/html/${guestappname}/localconfig && \
             sed -i "s|\$db_sock.*|\$db_sock = '/var/run/mysqld/mysqld.sock';|" /var/www/html/${guestappname}/localconfig
 
